--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="recipes/pizza.html">Pepperoni Pizza Recipe</a></li>
+      <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
       <li> <a href="recipes/apple-pie.html">Apple Pie Recipe</a></li>
       <li><a href="recipes/cookies.html">Chocolate Chip Cookie Recipe</a></li>
       <li><a href="recipes/fried-chicken.html">Fried Chicken Recipe</a></li>
