add information concerning the recipes and minor edits
complete adding recipes

--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -8,6 +8,26 @@
 <body>
     <h1>Fried Chicken Recipe</h1>
     <img src="../images/fried-chicken.jpg" alt="Photo of Crispy Fried Chicken" width="300">
+    <h2>Description</h2>
+      <p>This is the best fried chicken you will ever eat. You're neighbors will want to come over to try your chicken.</p>
+      <p>It has crispy breading and juicy insides.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1Ib chicken</li>
+        <li>1/2c Flour</li>
+        <li>1/2 tsp salt</li>
+        <li>1/4c potatoe starch</li>
+        <li>1liter oil</li>
+    </ul>
+    <h2>Steps</h2>
+      <ol>
+        <li>Prepare your chicken</li>
+        <li>Prepare your dry mixture</li>
+        <li>Dip chicken in dry mixture</li>
+        <li>Dip chicken in hot oil for 10 minutes</li>
+        <li>Remove and let rest on towel</li>
+        <li>Enjoy!</li>
+      </ol>
     <p><a href="../index.html">Go back to Home Page</a></p>
     
 </body>
